# insurance-fraud-detection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
